<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFAFF0EA"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFAFF0EA"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="11dp"
            android:text="Welcome to the Mortgage Calculator!"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            android:text="Please enter the following: "
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"

        android:background="#FFAFF0EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="50dip"
                android:paddingTop="20dip"
                android:paddingRight="50dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/home_value"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_home_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dip"

                    android:hint="$250,000"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="50dip"
                android:paddingTop="20dip"
                android:paddingRight="50dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/down_payment"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_down_payment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dip"
                    android:hint="$25,000"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="50dip"
                android:paddingTop="20dip"
                android:paddingRight="50dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="start"
                    android:text="@string/interest_rate"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_interest_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dip"
                    android:layout_weight="0.7"
                    android:hint="1.5%"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="50dip"
                android:paddingTop="20dip"
                android:paddingRight="50dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="start"
                    android:text="@string/terms"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/input_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dip"
                    android:layout_weight="0.7"
                    android:hint="24"
                    android:text="@string/terms" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="50dip"
                android:paddingTop="20dip"
                android:paddingRight="50dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="start"
                    android:text="@string/property_tax_rate"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_property_tax_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dip"
                    android:layout_weight="0.7"
                    android:hint="1000$/year"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button

                    android:id="@+id/reset_button"
                    android:layout_width="132dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="15dp"
                    android:background="@android:color/holo_red_dark"
                    android:backgroundTint="@color/colorAccent"
                    android:text="Reset"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/calculate_button"
                    android:layout_width="132dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="15dp"
                    android:background="@android:color/holo_blue_light"
                    android:text="Calculate" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>

